--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
 .App {
-  text-align: center;
+  /*background: rgb(255, 0, 228);
+  background: radial-gradient(
+    circle,
+    rgba(255, 0, 228, 1) 0%,
+    rgba(212, 51, 16, 1) 84%,
+    rgba(255, 0, 95, 1) 100%
+  );*/
+  background-color: #d0bdf4;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0%;
+  padding: 0%;
+  font-family: montserrat, arial, verdana;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.form-container {
+  width: 400px;
+  height: 500px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container .header {
+  flex: 20%;
+  display: grid;
+  place-items: center;
+}
+
+.form-container .body {
+  flex: 60%;
+}
+
+.form-container .footer {
+  flex: 20%;
+  display: flex;
+  justify-content: center;
+}
+
+.form-container .footer button {
+  border-radius: 10px;
+  width: 150px;
+  height: 40px;
+  background-color: #8458B3;
+  font-weight: bold;
   color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 5px;
+  margin: 5px;
+  font-size: 17px;
 }
 
-.App-link {
-  color: #61dafb;
+.sign-up-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sign-up-container input {
+  margin: 8px;
+  width: 300px;
+  height: 40px;
+  padding-left: 5px;
+  font-size: 17px;
+}
+
+.personal-info-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.personal-info-container input {
+  margin: 8px;
+  width: 300px;
+  height: 40px;
+  padding-left: 5px;
+  font-size: 17px;
+}
+
+/* PROGRESS BAR */
+.progressbar {
+  width: 400px;
+  height: 10px;
+  background-color: white;
+  margin-bottom: 40px;
+  border-radius: 5px;
+}
+
+.progressbar div {
+  width: 33.3%;
+  height: 100%;
+  border-radius: 5px;
+  background-color: #494D5F;
+}
+
+.other-info-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.other-info-container input {
+  margin: 8px;
+  width: 300px;
+  height: 40px;
+  padding-left: 5px;
+  font-size: 17px;
+}
+
+input {
+  border-radius: 10px;
+  border: none;
+  border-bottom: 2px solid gray;
+}
+
+input:focus {
+  outline: none;
 }
